--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.0",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
