--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.12.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.4",
