--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "add": "^2.0.6",
     "emailjs-com": "^3.2.0",
     "firebase": "^8.8.0",
+    "fuse.js": "^6.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
