--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
+    "browserslist": "^4.16.8",
+    "caniuse-lite": "^1.0.30001251",
     "emailjs-com": "^3.2.0",
     "firebase": "^8.8.0",
     "fuse.js": "^6.4.6",
